2011-04-10  Doug Hellmann  <dhellmann@racemi.com>

	* virtualenvwrapper.sh: Initialize VIRTUALENVWRAPPER_LOG_DIR and
	VIRTUALENVWRAPPER_HOOK_DIR.

	* virtualenvwrapper/hook_loader.py (main): Use
	VIRTUALENVWRAPPER_LOG_DIR for logs instead of assuming
	WORKON_HOME.

	* virtualenvwrapper/user_scripts.py (make_hook): Change verbosity
	of message telling the user we have created a new hook script for
	them.

2011-02-26  Doug Hellmann  <dhellmann@racemi.com>

	* docs/sphinx/conf.py: Just hard-code the version.

	* setup.py: Just hard-code the version.

	* virtualenvwrapper/version.py: Put the version info inside the
	package so it is available to the doc build and packaging
	script. This also makes the readthedocs.org build work properly.

	* setup.py: Import the version information from the package.

	* docs/sphinx/conf.py: Import the version information from the
	package.

	* Makefile: Remove rule to get the version from the installer for
	the doc build.

2011-01-24  Doug Hellmann  <dhellmann@racemi.com>

	* virtualenvwrapper.sh: Replace hard-coded name "virtualenv" with
	the variable VIRTUALENVWRAPPER_VIRTUALENV to allow tests (and
	users) to override it.

	* tests/test_mkvirtualenv.sh (test_virtualenv_fails): Add a test
	to reproduce the conditions reported in issue #76.

2010-12-27  Doug Hellmann  <dhellmann@racemi.com>

	* virtualenvwrapper.sh (virtualenvwrapper_get_python_version):
	Only include the major and minor numbers, not the patch level.

2010-12-26  Doug Hellmann  <dhellmann@racemi.com>

	* virtualenvwrapper/user_scripts.py (make_hook): Do not specify
	text mode when creating the files so cygwin will not replace \n
	with \r\n.

	* setup.py: Change "requires" to "install_requires" so pip will
	try to install virtualenv if it is not already there.  Add trove
	classifiers for the supported Python versions.

	* virtualenvwrapper.sh (virtualenvwrapper_get_python_version): Use
	python's -V option and cut to get the version instead of a python
	one-liner.
