@@ -1,3 +1,9 @@
+2011-04-13  Doug Hellmann  <dhellmann@racemi.com>
+
+	* virtualenvwrapper.sh (rmvirtualenv): Move to a safe directory
+	before removing the virtual environment, and only move back if the
+	previously occupied directory still exists.
+
 2011-04-10  Doug Hellmann  <dhellmann@racemi.com>
 
 	* virtualenvwrapper.sh: Initialize VIRTUALENVWRAPPER_LOG_DIR and
